--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -7,8 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex items-center justify-center h-screen bg-gray-700">
-    <div class="flex items-center justify-center w-full">
-        
+
+    <form action="/upload" method="POST" enctype="multipart/form-data">
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
         <label for="dropzone-file" id="dropzone" class="flex flex-col justify-start items-center justify-center w-96 h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-gray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
             <div class="flex flex-col items-center justify-center pt-5 pb-6">
                 <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
@@ -19,7 +20,14 @@
             </div>
             <input id="dropzone-file" type="file" class="hidden" multiple>
         </label>
-    </div>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+        <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-500">
+        <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
+        </div>
+
+
+    </form>
+
 
     <script>
         const dropzone = document.getElementById("dropzone");
