--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -23,7 +23,7 @@
         <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
         <div class="w-full bg-gray-200 rounded-full h-2.5 dark:bg-gray-500">
         <div class="bg-blue-600 h-2.5 rounded-full" style="width: 45%"></div>
-        </div>
+        </divoiu
 
 
     </form>
