--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -43,6 +43,7 @@
 
         const formData = new FormData();
         formData.append("file", file);
+        formData.append("hormone", "TAC mmol/L")
 
         fetch("/upload", {
             method: "POST",
