--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -45,7 +45,7 @@
                 const formData = new FormData();
                 formData.append("file", file);
                 formData.append("hormone", "TAC mmol/L");
-
+                formData.append("feature", '{"coh" : "alpha"}');
                 fetch("/upload", {
                     method: "POST",
                     body: formData
