--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -14,7 +14,7 @@
             <p class="block text-sm font-medium text-gray-300 mb-2">Select Feature:</p>
             <div id="feature-options" class="space-y-2">
                 <label class="block px-3 py-2 cursor-pointer">
-                    <input type="radio" name="feature" value="{'coh' : 'alpha'}"> Alpha Wave Coh
+                    <input type="radio" name="feature" value='{"coh" : "alpha"}'> Alpha Wave Coh
                 </label>
                 <label class="block px-3 py-2 cursor-pointer">
                     <input type="radio" name="feature" value="Feature_B"> Alpha + Beta Coh
@@ -115,7 +115,7 @@
                     formData.append("file", file);
                     formData.append("hormone", hormone);
                     formData.append("feature", selectedFeature); // Append the selected feature
-
+                    console.log(formData);
                     feedbackElement.textContent = "Loading...";
                     saliencyMapImg.classList.add("hidden");
 
