uhhh, github. good luck with this one fella. you are gonna need it :(

--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -17,10 +17,10 @@
                     <input type="radio" name="feature" value='{"coh" : "alpha"}'> Alpha Wave Coh
                 </label>
                 <label class="block px-3 py-2 cursor-pointer">
-                    <input type="radio" name="feature" value="Feature_B"> Alpha + Beta Coh
+                    <input type="radio" name="feature" value='{"coh" : "alpha"}, {"coh" : "beta"}'> Alpha + Beta Coh
                 </label>
                 <label class="block px-3 py-2 cursor-pointer">
-                    <input type="radio" name="feature" value="Feature_C"> Alpha + Beta + Delta Coh
+                    <input type="radio" name="feature" value='{"coh" : "delta"}, {"coh" : "gamma"}'> Delta + Gamme Coh
                 </label>
             </div>
         </div>
