--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -14,13 +14,19 @@
             <p class="block text-sm font-medium text-gray-300 mb-2">Select Feature:</p>
             <div id="feature-options" class="space-y-2">
                 <label class="block px-3 py-2 cursor-pointer">
-                    <input type="radio" name="feature" value='{"coh" : "alpha"}'> Alpha Wave Coh
+                    <input type="radio" name="feature" value='{"coh" : "alpha"}'> Alpha Coherance
                 </label>
                 <label class="block px-3 py-2 cursor-pointer">
-                    <input type="radio" name="feature" value='{"coh" : "alpha"}, {"coh" : "beta"}'> Alpha + Beta Coh
+                    <input type="radio" name="feature" value='{"coh" : "delta"}'> Delta Coherance
                 </label>
                 <label class="block px-3 py-2 cursor-pointer">
-                    <input type="radio" name="feature" value='{"coh" : "delta"}, {"coh" : "gamma"}'> Delta + Gamme Coh
+                    <input type="radio" name="feature" value='{"coh" : "gamma"}'> Gamma Coherance
+                </label>
+                <label class="block px-3 py-2 cursor-pointer">
+                    <input type="radio" name="feature" value='{"coh" : "beta"}'> Beta Coherance
+                </label>
+                <label class="block px-3 py-2 cursor-pointer">
+                    <input type="radio" name="feature" value='{"coh" : "theta"}'> Theta Coherance
                 </label>
             </div>
         </div>
